# vsh

./: .gitignore  Cargo.toml  Makefile  README.md  default-config  install.py  main.vsh
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
docs/: THEME.md
src/: command.rs  commands.rs  eval.rs  git.rs  highlight.rs  main.rs  prompt.rs  repl.rs  utils.rs
src/builtins/: cd.rs  ls.rs  mod.rs
src/commands/: cd.rs  mod.rs
src/theme/: context.rs  format.rs  format_test.rs  mod.rs  parser.rs  parser_test.rs
src/utils/: git.rs  mod.rs  prompt.rs  utils.rs
