[package]
name = "vsh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.7.1"
lazy_static = "*"
serde = "1.0.130"
toml = "0.5.8"
serde_derive = "1.0"
colored = "2"
rustyline = "9.1.0"
directories = "4.0.1"
