[package]
name = "vsh"
version = "0.1.16"
edition = "2021"

[dependencies]
fancy-regex = "0.7.1"
lazy_static = "*"
serde = "1.0.130"
toml = "0.5.8"
signal-hook = "0.3.13"
libc = "0.2.115"
serde_derive = "1.0"
colored = "2"
rustyline = "9.1.0"
rustyline-derive = "0.6.0"
nom = "7.1.0"
nom_locate = "4.0.0"
whoami = "1.2.1"
chrono = "0.4.19"